--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"homepage": "./",
 	"dependencies": {
+		"@electron/remote": "^2.0.8",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
